--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header class="page-header">
       <a class="logo" href="#">
-        <img src="img/placeholder.svg" width="100px" height="50px" alt="Логотип">
+        <img src="" width="100px" height="50px" alt="Логотип">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
