Добавляет пользовательское меню в header

--- a/index.html
+++ b/index.html
@@ -21,6 +21,29 @@
             <a class="navigation-link" href="hotels.html">Гостиницы</a>
           </li>
         </ul>
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visualli-hidden">
+              Поиск
+              </span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visualli-hidden">
+              Избранное
+              </span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="@">
+              <span class="visualli-hidden">
+              Гостиницы.
+              </span>
+            </a>
+          </li>
+        </ul>
       </nav>
     </header>
     <main>
