--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
             <a class="navigation-link" href="hotels.html">Гостиницы</a>
           </li>
         </ul>
-        <ul class="navigation-list">
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">
+        <ul class="user-list">
+          <li class="user-item">
+            <a class="user-link" href="#">
               <span class="visualli-hidden">
               Поиск
               </span>
             </a>
           </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">
+          <li class="user-item">
+            <a class="user-link" href="#">
               <span class="visualli-hidden">
               Избранное
               </span>
             </a>
           </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="@">
+          <li class="user-item">
+            <a class="user-link" href="@">
               <span class="visualli-hidden">
               Гостиницы.
               </span>
