Уточняет классы у пользовательского меню

--- a/index.html
+++ b/index.html
@@ -23,24 +23,19 @@
         </ul>
         <ul class="user-list">
           <li class="user-item">
-            <a class="user-link" href="#">
-              <span class="visualli-hidden">
-              Поиск
-              </span>
+            <a class="user-link user-link-search" href="#">
+              <span class="visualli-hidden">Поиск</span>
             </a>
           </li>
           <li class="user-item">
-            <a class="user-link" href="#">
-              <span class="visualli-hidden">
-              Избранное
-              </span>
+            <a class="user-link user-link-favorites" href="#">
+              <span class="visualli-hidden">Избранное</span>
+              <span class="user-favorites-num">12</span>
             </a>
           </li>
           <li class="user-item">
-            <a class="user-link" href="@">
-              <span class="visualli-hidden">
-              Гостиницы.
-              </span>
+            <a class="user-link " href="@">
+              <span class="visualli-hidden">Кнопка Хочу сюда</span>
             </a>
           </li>
         </ul>
