--- a/3/index.html
+++ b/3/index.html
@@ -8,7 +8,7 @@
   <body>
     <header class="page-header">
       <a class="logo" href="#">
-        <img src="" width="100px" height="50px" alt="Логотип">
+        <img src="" width="" height="" alt="Логотип">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
@@ -16,10 +16,10 @@
             <a class="navigation-link" href="index.html">Главная</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="about.html">О Седоне</a>
+            <a class="navigation-link" href="#">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="hotels.html">Гостиницы</a>
+            <a class="navigation-link" href="#">Гостиницы</a>
           </li>
         </ul>
         <ul class="user-list">
@@ -30,21 +30,107 @@
           </li>
           <li class="user-item">
             <a class="user-link user-link-favorites" href="#">
-              <span class="visualli-hidden">Избранное</span>
+              <span class="visualli-hidden">Количество отелей в избранном</span>
               <span class="user-favorites-num">12</span>
             </a>
           </li>
-          <li class="user-item">
-            <a class="user-link " href="@">
-              <span class="visualli-hidden">Кнопка Хочу сюда</span>
-            </a>
+          <li class="navigation-item">
+            <a class="navigation-button" href="#">ХОЧУ СЮДА!</a>
           </li>
         </ul>
       </nav>
     </header>
-    <main>
+    <main class="main-index">
+      <h1 class="visualli-hidden">Курортный город Седона</h1>
+      <section class="hero">
+        <h2 class="visually-hidden">Приветственный раздел</h2>
+        <img class="hero-image" src="img/index-background.png"
+        alt="Горы с наддписью Welcome to the gorgerous Sedona, because Grand Canyon sucks!">
+        <h3 class="hero-slogan">Седона — небольшой городок в Аризоне, заслуживающий большего!</h3>
+        <p class="hero-reasons">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+      </section>
+
+      <section class="advantages">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <ul class="advantages-list">
+          <li class="advantages-item-picture">
+            <div class="advantage-picture-text">
+              <h3 class="advantages-title  color-basic-3">Настоящий<br>городок</h3>
+              <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            </div>
+            <img class="advantage-image" src="img/photo-1.jpg" width="" height="" alt="Вид на дом из сада">
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title color-second-1">Небольшая<br>площадь</h3>
+            <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+          </li>
+          <li class="advantages-item color-basic-3">
+            <h3 class="advantages-title  color-second-2">Красивая<br>дорога</h3>
+            <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title color-second-1">Мало<br>туристов</h3>
+            <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+          <li class="advantages-item-picture">
+            <img class="advantage-image" src="img/photo-2.jpg"
+              alt="Вид на каньон, который на переднем плане и горы вдали - на заднем." width="800" height="385">
+            <div class="advantage-picture-text">
+              <h3 class="advantages-title  color-basic-3">Там есть<br> мост дьявола</h3>
+              <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            </div>
+          </li>
+        </ul>
+      </section>
+
+      <section class="invitation">
+        <h2 class="visually-hidden">Приглашение</h2>
+        <h3 class="invitation-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h3>
+        <p class="invitation-description">Опытный персонал и качественное обслуживание!</p>
+      </section>
+
+      <section class="services">
+        <h2 class="visualli-hidden">Сервис</h2>
+        <ul class="services-list ">
+          <li class="services-item">
+            <h3 class="services-title  color-second-1">Жильё</h3>
+            <p class="services-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-title">Еда</h3>
+            <p class="services-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-title  color-second-1">Сувениры</h3>
+            <p class="services-description">Не только китайского, но и настоящего местного производства!</p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="interested">
+        <h2 class="visualli-hidden">Поиск гостиницы</h2>
+        <h3 class="interested-title">Заинтересовались?</h3>
+        <p class="interested-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a class="interested-button" href="#">Поиск гостиницы в Cедоне</a>
+      </section>
+
+      <section class="subscribe">
+        <h2 class="visualli-hidden"></h2>
+        <h3 class="subscribe-title">Подпишитесь на рассылку</h3>
+        <p class="subscribe-description">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
+        <form class="subscribe-form" action=" https://echo.htmlacademy.ru/" method="post">
+          <label>
+            <span class="visually-hidden">Ваш e-mail</span>
+            <input class="subscribe-field" type="email" name="email-field" placeholder="Ваш e-mail" required>
+          </label>
+          <button class="subscribe-button" type="submit">Подписаться</button>
+        </form>
+      </section>
     </main>
+
     <footer>
+
+
     </footer>
   </body>
 </html>
