--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link" href="index.html">Главная</a>
+            <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">О Седоне</a>
@@ -41,12 +41,10 @@
     </header>
 
     <main class="main-index">
-      <h1 class="visually-hidden">Курортный город Седона</h1>
 
       <section class="hero">
-        <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
-        <img class="hero-image" src="#"
-        alt="Welcome to the gorgerous Sedona, because Grand Canyon sucks!">
+        <h1 class="visually-hidden">Курортный город Седона</h1>
+        <img class="hero-image" src="#" alt="Welcome to the gorgerous Sedona, because Grand Canyon sucks!">
       </section>
 
       <section class="advantages">
