Добавляет section class="hero"

--- a/catalog.html
+++ b/catalog.html
@@ -43,6 +43,7 @@
     <main>
       <section class="hero">
         <h1 class="">Гостиницы Седоны</h1>
+        <p class="breadcrumbs"><span class="visually-hidden breadcrumbs-home">Домой</span></p>
 
       </section>
 
