--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="logo" href="#">
+      <a class="logo" href="index.html">
         <img src="" width="" height="" alt="Логотип">
       </a>
       <nav class="navigation">
