--- a/catalog.html
+++ b/catalog.html
@@ -134,11 +134,101 @@
           <span class="visually-hidden">Показать список</span>
         </a>
         <a class="button" href="#">
-          <span class="visually-hidden">Показать слайдом</span>
+          <span class="visually-hidden">Показать слайды</span>
         </a>
         <a class="button" href="#">
           <span class="visually-hidden">Показать карточки</span>
         </a>
+
+        <div class="product-cards">
+          <ul class="product-list">
+            <li class="product-item">
+              <a class="product-card-link" href="#">
+                <h3 class="product-card-title">Amara Resort & Spa</h3>
+                <img class="product-card-image" src="#" alt="Фотография отлеля Amara Resort & Spa">
+              </a>
+              <p class="product-card-price">
+                <span class="product-type">Гостиница</span>
+                <span class="product-price">От 4000 ₽"</span>
+              </p>
+              <a href="#" class="hotels-card-more ">Подробнее</a>
+              <buttom class="hotels-card-favorites" type="submit">В Избранное</buttom>
+              <p class="product-category star-4">
+                <span class="visually-hidden">Четыре звезды</span>
+              </p>
+              <p class="product-raiting">Рейтинг: <span class="product-raiting-value">8,5</span></p>
+            </li>
+            <li class="product-item">
+              <a class="product-card-link" href="#">
+                <h3 class="product-card-title">Villas at Poco Diablo</h3>
+                <img class="product-card-image" src="#" alt="Фотография отлеля Villas at Poco Diablo">
+              </a>
+              <p class="product-card-price">
+                <span class="product-type">Гостиница</span>
+                <span class="product-price">От 5000 ₽"</span>
+              </p>
+              <a href="#" class="hotels-card-more ">Подробнее</a>
+              <buttom class="hotels-card-favorites" type="buttom">В Избранное</buttom>
+              <p class="product-category star-4">
+                <span class="visually-hidden">Четыре звезды</span>
+              </p>
+              <p class="product-raiting">Рейтинг: <span class="product-raiting-value">9,2</span></p>
+            </li>
+            <li class="product-item">
+              <a class="product-card-link" href="#">
+                <h3 class="product-card-title">Desert Quail Inna</h3>
+                <img class="product-card-image" src="#" alt="Фотография отлеля Desert Quail Inn">
+              </a>
+              <p class="product-card-price">
+                <span class="product-type">Гостиница</span>
+                <span class="product-price">От 2500 ₽"</span>
+              </p>
+              <a href="#" class="hotels-card-more ">Подробнее</a>
+              <buttom class="hotels-card-favorites" type="buttom">В Избранное</buttom>
+              <p class="product-category star-3">
+                <span class="visually-hidden">Три звезды</span>
+              </p>
+              <p class="product-raiting">Рейтинг: <span class="product-raiting-value">6,9</span></p>
+            </li>
+            <li class="product-item">
+              <a class="product-card-link" href="#">
+                <h3 class="product-card-title">GreenTree Inn</h3>
+                <img class="product-card-image" src="#" alt="Фотография отлеля GreenTree Inn">
+              </a>
+              <p class="product-card-price">
+                <span class="product-type">Гостиница</span>
+                <span class="product-price">От 1500 ₽"</span>
+              </p>
+              <a href="#" class="hotels-card-more ">Подробнее</a>
+              <buttom class="hotels-card-favorites" type="buttom">В Избранное</buttom>
+              <p class="product-category star-2">
+                <span class="visually-hidden">Две звезды</span>
+              </p>
+              <p class="product-raiting">Рейтинг: <span class="product-raiting-value">5,0</span></p>
+            </li>
+          </ul>
+        </div>
+
+        <ul class="pagination">
+          <li class="pagination-item">
+            <a class="pagination-link pagination-current" href="#">1</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">2</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">3</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">4</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link pagination-ellipsis" href="#">...</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">10</a>
+          </li>
+        </ul>
       </section>
 
       <section class="subscribe">
