--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <h3 class="advantages-title  color-basic-3">Настоящий<br>городок</h3>
               <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
-            <img class="advantage-image" src="img/photo-1.jpg" width="" height="" alt="Вид на дом из сада">
+            <img class="advantage-image" src="#" width="" height="" alt="Вид на дом из сада">
           </li>
           <li class="advantages-item">
             <h3 class="advantages-title color-second-1">Небольшая<br>площадь</h3>
