Добавляет решетки и кавычки в index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header class="page-header">
       <a class="logo" href="index.html">
-        <img src="" width="" height="" alt="Логотип">
+        <img src="#" width="" height="" alt="Логотип">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
@@ -83,7 +83,7 @@
 
       <section class="services">
         <h2 class="services-slogan">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
-        <p class=services-reasons">Опытный персонал и качественное обслуживание!</p>
+        <p class="services-reasons">Опытный персонал и качественное обслуживание!</p>
         <ul class="services-list">
           <li class="services-item">
             <h3 class="services-title  color-second-1">Жильё</h3>
