--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <body>
     <header class="page-header">
       <a class="logo" href="#">
-        <img src="" width="" height="" alt="Логотип">
+        <img src="#" width="" height="" alt="Логотип">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
@@ -152,7 +152,7 @@
                 <span class="product-price">От 4000 ₽"</span>
               </p>
               <a href="#" class="hotels-card-more ">Подробнее</a>
-              <buttom class="hotels-card-favorites" type="submit">В Избранное</buttom>
+              <a class="hotels-card-favorites" href="#">В Избранное</a>
               <p class="product-category star-4">
                 <span class="visually-hidden">Четыре звезды</span>
               </p>
@@ -168,7 +168,7 @@
                 <span class="product-price">От 5000 ₽"</span>
               </p>
               <a href="#" class="hotels-card-more ">Подробнее</a>
-              <buttom class="hotels-card-favorites" type="buttom">В Избранное</buttom>
+              <a class="hotels-card-favorites" href="#">В Избранное</a>
               <p class="product-category star-4">
                 <span class="visually-hidden">Четыре звезды</span>
               </p>
@@ -184,7 +184,7 @@
                 <span class="product-price">От 2500 ₽"</span>
               </p>
               <a href="#" class="hotels-card-more ">Подробнее</a>
-              <buttom class="hotels-card-favorites" type="buttom">В Избранное</buttom>
+              <a class="hotels-card-favorites" href="#">В Избранное</a>
               <p class="product-category star-3">
                 <span class="visually-hidden">Три звезды</span>
               </p>
@@ -200,7 +200,7 @@
                 <span class="product-price">От 1500 ₽"</span>
               </p>
               <a href="#" class="hotels-card-more ">Подробнее</a>
-              <buttom class="hotels-card-favorites" type="buttom">В Избранное</buttom>
+              <a class="hotels-card-favorites" href="#">В Избранное</a>
               <p class="product-category star-2">
                 <span class="visually-hidden">Две звезды</span>
               </p>
