Оборачивает карточку гостиницы в article

--- a/catalog.html
+++ b/catalog.html
@@ -143,68 +143,76 @@
         <div class="product-cards">
           <ul class="product-list">
             <li class="product-item">
-              <a class="product-card-link" href="#">
-                <h3 class="product-card-title">Amara Resort & Spa</h3>
-                <img class="product-card-image" src="#" alt="Фотография отлеля Amara Resort & Spa">
-              </a>
-              <p class="product-card-price">
-                <span class="product-type">Гостиница</span>
-                <span class="product-price">От 4000 ₽"</span>
-              </p>
-              <a href="#" class="hotels-card-more ">Подробнее</a>
-              <a class="hotels-card-favorites" href="#">В Избранное</a>
-              <p class="product-category star-4">
-                <span class="visually-hidden">Четыре звезды</span>
-              </p>
-              <p class="product-raiting">Рейтинг: <span class="product-raiting-value">8,5</span></p>
+              <article class="product-card">
+                <a class="product-link" href="#">
+                  <h3 class="product-title">Amara Resort & Spa</h3>
+                  <img class="product-image" src="#" alt="Фотография отлеля Amara Resort & Spa">
+                </a>
+                <p class="product-price-tag">
+                  <span class="product-type">Гостиница</span>
+                  <span class="product-price">От 4000 ₽"</span>
+                </p>
+                <a href="#" class="product-more">Подробнее</a>
+                <buttom class="product-favorites" type="buttom">В Избранное</buttom>
+                <p class="product-category star-4">
+                  <span class="visually-hidden">Четыре звезды</span>
+                </p>
+                <p class="product-raiting">Рейтинг: <span class="product-raiting-value">8,5</span></p>
+              </article>
             </li>
             <li class="product-item">
-              <a class="product-card-link" href="#">
-                <h3 class="product-card-title">Villas at Poco Diablo</h3>
-                <img class="product-card-image" src="#" alt="Фотография отлеля Villas at Poco Diablo">
-              </a>
-              <p class="product-card-price">
-                <span class="product-type">Гостиница</span>
-                <span class="product-price">От 5000 ₽"</span>
-              </p>
-              <a href="#" class="hotels-card-more ">Подробнее</a>
-              <a class="hotels-card-favorites" href="#">В Избранное</a>
-              <p class="product-category star-4">
-                <span class="visually-hidden">Четыре звезды</span>
-              </p>
-              <p class="product-raiting">Рейтинг: <span class="product-raiting-value">9,2</span></p>
+              <article class="product-card">
+                <a class="product-link" href="#">
+                  <h3 class="product-title">Villas at Poco Diablo</h3>
+                  <img class="product-image" src="#" alt="Фотография отлеля Villas at Poco Diablo">
+                </a>
+                <p class="product-price-tag">
+                  <span class="product-type">Гостиница</span>
+                  <span class="product-price">От 5000 ₽"</span>
+                </p>
+                <a href="#" class="product-more">Подробнее</a>
+                <buttom class="product-favorites" type="buttom">В Избранное</buttom>
+                <p class="product-category star-4">
+                  <span class="visually-hidden">Четыре звезды</span>
+                </p>
+                <p class="product-raiting">Рейтинг: <span class="product-raiting-value">9,2</span></p>
+              </article>
             </li>
             <li class="product-item">
-              <a class="product-card-link" href="#">
-                <h3 class="product-card-title">Desert Quail Inna</h3>
-                <img class="product-card-image" src="#" alt="Фотография отлеля Desert Quail Inn">
-              </a>
-              <p class="product-card-price">
-                <span class="product-type">Гостиница</span>
-                <span class="product-price">От 2500 ₽"</span>
-              </p>
-              <a href="#" class="hotels-card-more ">Подробнее</a>
-              <a class="hotels-card-favorites" href="#">В Избранное</a>
-              <p class="product-category star-3">
-                <span class="visually-hidden">Три звезды</span>
-              </p>
-              <p class="product-raiting">Рейтинг: <span class="product-raiting-value">6,9</span></p>
+              <article class="product-card">
+                <a class="product-link" href="#">
+                  <h3 class="product-title">Desert Quail Inna</h3>
+                  <img class="product-image" src="#" alt="Фотография отлеля Desert Quail Inna">
+                </a>
+                <p class="product-price-tag">
+                  <span class="product-type">Гостиница</span>
+                  <span class="product-price">От 2500 ₽"</span>
+                </p>
+                <a href="#" class="product-more">Подробнее</a>
+                <buttom class="product-favorites" type="buttom">В Избранное</buttom>
+                <p class="product-category star-3">
+                  <span class="visually-hidden">Три звезды</span>
+                </p>
+                <p class="product-raiting">Рейтинг: <span class="product-raiting-value">6,9</span></p>
+              </article>
             </li>
             <li class="product-item">
-              <a class="product-card-link" href="#">
-                <h3 class="product-card-title">GreenTree Inn</h3>
-                <img class="product-card-image" src="#" alt="Фотография отлеля GreenTree Inn">
-              </a>
-              <p class="product-card-price">
-                <span class="product-type">Гостиница</span>
-                <span class="product-price">От 1500 ₽"</span>
-              </p>
-              <a href="#" class="hotels-card-more ">Подробнее</a>
-              <a class="hotels-card-favorites" href="#">В Избранное</a>
-              <p class="product-category star-2">
-                <span class="visually-hidden">Две звезды</span>
-              </p>
-              <p class="product-raiting">Рейтинг: <span class="product-raiting-value">5,0</span></p>
+              <article class="product-card">
+                <a class="product-link" href="#">
+                  <h3 class="product-title">GreenTree Inn</h3>
+                  <img class="product-image" src="#" alt="Фотография отлеля GreenTree Inn">
+                </a>
+                <p class="product-price-tag">
+                  <span class="product-type">Гостиница</span>
+                  <span class="product-price">От 1500 ₽"</span>
+                </p>
+                <a href="#" class="product-more">Подробнее</a>
+                <buttom class="product-favorites" type="buttom">В Избранное</buttom>
+                <p class="product-category star-2">
+                  <span class="visually-hidden">Две звезды</span>
+                </p>
+                <p class="product-raiting">Рейтинг: <span class="product-raiting-value">5,0</span></p>
+              </article>
             </li>
           </ul>
         </div>
