Убирает лишние br в преимуществах

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 
       <section class="hero">
         <h1 class="visually-hidden">Курортный город Седона</h1>
-        <img class="hero-image" src="#" alt="Welcome to the gorgerous Sedona, because Grand Canyon sucks!">
+        <img class="hero-image" src="#" alt="Изображение гор">
+        <img class="hero-title" src="#" alt="Welcome to the gorgerous Sedona, because Grand Canyon sucks!">
       </section>
 
       <section class="advantages">
@@ -53,28 +54,28 @@
         <ul class="advantages-list">
           <li class="advantages-item-picture">
             <div class="advantage-picture-text">
-              <h3 class="advantages-title  color-basic-3">Настоящий<br>городок</h3>
+              <h3 class="advantages-title  color-basic-3">Настоящий городок</h3>
               <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
             <img class="advantage-image" src="#" width="" height="" alt="Вид на дом из сада">
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-title color-second-1">Небольшая<br>площадь</h3>
+            <h3 class="advantages-title color-second-1">Небольшая площадь</h3>
             <p class="advantages-description">Все достопримечательности находятся очень близко</p>
           </li>
           <li class="advantages-item color-basic-3">
-            <h3 class="advantages-title  color-second-2">Красивая<br>дорога</h3>
+            <h3 class="advantages-title  color-second-2">Красивая дорога</h3>
             <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-title color-second-1">Мало<br>туристов</h3>
+            <h3 class="advantages-title color-second-1">Мало туристов</h3>
             <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
           <li class="advantages-item-picture">
             <img class="advantage-image" src="img/photo-2.jpg"
               alt="Вид на каньон" width="800" height="385">
             <div class="advantage-picture-text">
-              <h3 class="advantages-title  color-basic-3">Там есть<br> мост дьявола</h3>
+              <h3 class="advantages-title  color-basic-3">Там есть мост дьявола</h3>
               <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </div>
           </li>
