--- a/catalog.html
+++ b/catalog.html
@@ -41,9 +41,9 @@
     </header>
 
     <main class="main-catalog">
-      <header class="catalog-header">
+      <section class="catalog-header">
         <h1 class="catalog-header-title">Гостиницы Седоны</h1>
-        <ul class="breadcrumbs">
+        <ol class="breadcrumbs">
           <li class="breadcrumbs-item">
             <a class="breadcrumbs-link" href="index.html">
               <span class="visually-hidden">Главная</span>
@@ -54,8 +54,8 @@
               Гостиницы
             </a>
           </li>
-        </ul>
-      </header>
+        </ol>
+      </section>
 
       <section class="filter-wrapper">
         <h2 class="visually-hidden">Фильтры выбора гостиницы</h2>
@@ -124,7 +124,7 @@
       </section>
 
       <section class="catalog-products">
-        <h2 class="catalog-products-title">Найдено гостиниц: <span class="number-prodacts">38</span></h2>
+        <h2 class="catalog-products-title">Найдено гостиниц: <span class="search-result">38</span></h2>
         <select class="select-control" aria-label="Сортировка">
           <option value="cheap">Сначала дешёвые</option>
           <option value="expensive">Сначала дорогие</option>
