--- a/catalog.html
+++ b/catalog.html
@@ -230,13 +230,9 @@
           <li class="pagination-item">
             <a class="pagination-link" href="#">4</a>
           </li>
-          <li class="pagination-item">
-            <a class="pagination-link pagination-ellipsis" href="#">...</a>
-          </li>
-          <li class="pagination-item">
-            <a class="pagination-link" href="#">10</a>
-          </li>
         </ul>
+        <span class="pagination-ellipsis">...</span>
+        <a class="pagination-link" href="#">10</a>
       </section>
 
       <section class="subscribe">
