--- a/3/index.html
+++ b/3/index.html
@@ -7,30 +7,30 @@
 </head>
   <body>
     <header class="page-header">
-      <a class="logo" href="#">
-        <img src="" width="" height="" alt="Логотип">
+      <a class="logo" href="index.html">
+        <img src="#" width="" height="" alt="Логотип">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link" href="index.html">Главная</a>
+            <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">Гостиницы</a>
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
         <ul class="user-list">
           <li class="user-item">
             <a class="user-link user-link-search" href="#">
-              <span class="visualli-hidden">Поиск</span>
+              <span class="visually-hidden">Поиск</span>
             </a>
           </li>
           <li class="user-item">
             <a class="user-link user-link-favorites" href="#">
-              <span class="visualli-hidden">Количество отелей в избранном</span>
+              <span class="visually-hidden">Количество отелей в избранном</span>
               <span class="user-favorites-num">12</span>
             </a>
           </li>
@@ -40,58 +40,53 @@
         </ul>
       </nav>
     </header>
+
     <main class="main-index">
-      <h1 class="visualli-hidden">Курортный город Седона</h1>
+
       <section class="hero">
-        <h2 class="visually-hidden">Приветственный раздел</h2>
-        <img class="hero-image" src="img/index-background.png"
-        alt="Горы с наддписью Welcome to the gorgerous Sedona, because Grand Canyon sucks!">
-        <h3 class="hero-slogan">Седона — небольшой городок в Аризоне, заслуживающий большего!</h3>
-        <p class="hero-reasons">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+        <h1 class="visually-hidden">Курортный город Седона</h1>
+        <img class="hero-image" src="#" alt="Изображение гор">
+        <img class="hero-title" src="#" alt="Welcome to the gorgerous Sedona, because Grand Canyon sucks!">
       </section>
 
       <section class="advantages">
-        <h2 class="visually-hidden">Преимущества</h2>
+        <h2 class="advantages-slogan">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+        <p class="advantages-reasons">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <ul class="advantages-list">
           <li class="advantages-item-picture">
             <div class="advantage-picture-text">
-              <h3 class="advantages-title  color-basic-3">Настоящий<br>городок</h3>
+              <h3 class="advantages-title  color-basic-3">Настоящий городок</h3>
               <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
-            <img class="advantage-image" src="img/photo-1.jpg" width="" height="" alt="Вид на дом из сада">
+            <img class="advantage-image" src="#" width="" height="" alt="Вид на дом из сада">
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-title color-second-1">Небольшая<br>площадь</h3>
+            <h3 class="advantages-title color-second-1">Небольшая площадь</h3>
             <p class="advantages-description">Все достопримечательности находятся очень близко</p>
           </li>
           <li class="advantages-item color-basic-3">
-            <h3 class="advantages-title  color-second-2">Красивая<br>дорога</h3>
+            <h3 class="advantages-title  color-second-2">Красивая дорога</h3>
             <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-title color-second-1">Мало<br>туристов</h3>
+            <h3 class="advantages-title color-second-1">Мало туристов</h3>
             <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
           <li class="advantages-item-picture">
             <img class="advantage-image" src="img/photo-2.jpg"
-              alt="Вид на каньон, который на переднем плане и горы вдали - на заднем." width="800" height="385">
+              alt="Вид на каньон" width="800" height="385">
             <div class="advantage-picture-text">
-              <h3 class="advantages-title  color-basic-3">Там есть<br> мост дьявола</h3>
+              <h3 class="advantages-title  color-basic-3">Там есть мост дьявола</h3>
               <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </div>
           </li>
         </ul>
       </section>
 
-      <section class="invitation">
-        <h2 class="visually-hidden">Приглашение</h2>
-        <h3 class="invitation-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h3>
-        <p class="invitation-description">Опытный персонал и качественное обслуживание!</p>
-      </section>
-
       <section class="services">
-        <h2 class="visualli-hidden">Сервис</h2>
-        <ul class="services-list ">
+        <h2 class="services-slogan">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+        <p class="services-reasons">Опытный персонал и качественное обслуживание!</p>
+        <ul class="services-list">
           <li class="services-item">
             <h3 class="services-title  color-second-1">Жильё</h3>
             <p class="services-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
@@ -108,15 +103,13 @@
       </section>
 
       <section class="interested">
-        <h2 class="visualli-hidden">Поиск гостиницы</h2>
-        <h3 class="interested-title">Заинтересовались?</h3>
+        <h2 class="interested-title">Заинтересовались?</h2>
         <p class="interested-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a class="interested-button" href="#">Поиск гостиницы в Cедоне</a>
       </section>
 
       <section class="subscribe">
-        <h2 class="visualli-hidden"></h2>
-        <h3 class="subscribe-title">Подпишитесь на рассылку</h3>
+        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
         <p class="subscribe-description">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
         <form class="subscribe-form" action=" https://echo.htmlacademy.ru/" method="post">
           <label>
@@ -128,9 +121,28 @@
       </section>
     </main>
 
-    <footer>
-
-
+    <footer class="page-footer">
+      <ul class="socials-list">
+        <li class="socials-item">
+          <a class="socials-link-vk" href="#">
+            <span class="visually-hidden">В Контакте</span>
+          </a>
+        </li>
+        <li class="socials-item">
+          <a class="socials-link-tg" href="#">
+            <span class="visually-hidden">Telegram</span>
+          </a>
+        </li>
+        <li class="socials-item">
+          <a class="socials-link-yt" href="#">
+            <span class="visually-hidden">Youtube</span>
+          </a>
+        </li>
+      </ul>
+      <a class="phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      <a class="copyright-logo" href="https://htmlacademy.ru/">
+        <span class="visually-hidden">Разработано htmlacademy.ru</span>
+      </a>
     </footer>
   </body>
 </html>
