--- a/index.html
+++ b/index.html
@@ -40,42 +40,49 @@
       </nav>
     </header>
 
-    <main class="main-index">
+    <main>
 
       <section class="hero">
         <h1 class="visually-hidden">Курортный город Седона</h1>
-        <img class="hero-image" src="#" alt="Изображение гор">
-        <img class="hero-title" src="#" alt="Welcome to the gorgerous Sedona, because Grand Canyon sucks!">
+
+        <img class="hero-title" src="images/welcome.svg" width="458" height="352" alt="Welcome to the gorgerous Sedona, because Grand Canyon sucks!">
+        <img class="hero-image" src="images/index-background.jpg" width="1200" height="485" alt="Изображение гор">
       </section>
+
 
       <section class="advantages">
         <h2 class="advantages-slogan">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
         <p class="advantages-reasons">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <ul class="advantages-list">
           <li class="advantages-item-picture">
-            <div class="advantage-picture-text">
-              <h3 class="advantages-title  color-basic-3">Настоящий городок</h3>
+            <div class="description-element color-basic">
+              <h3 class="advantages-title  ">Настоящий городок</h3>
               <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
-            <img class="advantage-image" src="#" width="" height="" alt="Вид на дом из сада">
+            <img class="advantage-image" src="#" width="800" height="385" alt="Вид на дом из сада">
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-title color-second-1">Небольшая площадь</h3>
-            <p class="advantages-description">Все достопримечательности находятся очень близко</p>
-          </li>
-          <li class="advantages-item color-basic-3">
-            <h3 class="advantages-title  color-second-2">Красивая дорога</h3>
-            <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            <div class="description-element color-light">
+              <h3 class="advantages-title">Небольшая площадь</h3>
+              <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+            </div>
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-title color-second-1">Мало туристов</h3>
-            <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+            <div class="description-element color-pale">
+              <h3 class="advantages-title">Красивая дорога</h3>
+              <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </div>
+          </li>
+          <li class="advantages-item">
+            <div class="description-element color-light">
+              <h3 class="advantages-title">Мало туристов</h3>
+              <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+            </div>
           </li>
           <li class="advantages-item-picture">
-            <img class="advantage-image" src="img/photo-2.jpg"
-              alt="Вид на каньон" width="800" height="385">
-            <div class="advantage-picture-text">
-              <h3 class="advantages-title  color-basic-3">Там есть мост дьявола</h3>
+            <img class="advantage-image" src="img/photo-2.jpg" width="800" height="385" alt="Вид на каньон">
+            <div class="description-element color-basic">
+              <h3 class="advantages-title">Там есть мост дьявола</h3>
               <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </div>
           </li>
@@ -87,16 +94,22 @@
         <p class="services-reasons">Опытный персонал и качественное обслуживание!</p>
         <ul class="services-list">
           <li class="services-item">
-            <h3 class="services-title  color-second-1">Жильё</h3>
-            <p class="services-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            <div class="description-element color-light">
+              <h3 class="services-title">Жильё</h3>
+              <p class="services-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            </div>
           </li>
           <li class="services-item">
-            <h3 class="services-title">Еда</h3>
-            <p class="services-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            <div class="description-element">
+              <h3 class="services-title">Еда</h3>
+              <p class="services-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            </div>
           </li>
           <li class="services-item">
-            <h3 class="services-title  color-second-1">Сувениры</h3>
-            <p class="services-description">Не только китайского, но и настоящего местного производства!</p>
+            <div class="description-element color-light">
+              <h3 class="services-title">Сувениры</h3>
+              <p class="services-description">Не только китайского, но и настоящего местного производства!</p>
+            </div>
           </li>
         </ul>
       </section>
@@ -139,6 +152,10 @@
         </li>
       </ul>
       <a class="phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+
+
+
+
       <a class="copyright-logo" href="https://htmlacademy.ru/">
         <span class="visually-hidden">Разработано htmlacademy.ru</span>
       </a>
