--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header class="page-header">
       <a class="logo" href="index.html">
-        <img src="#" width="" height="" alt="Логотип">
+        <img src="images/header/logo.svg" width="140" height="70,05" alt="Логотип">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
@@ -45,8 +45,8 @@
       <section class="hero">
         <h1 class="visually-hidden">Курортный город Седона</h1>
 
-        <img class="hero-title" src="images/welcome.svg" width="458" height="352" alt="Welcome to the gorgerous Sedona, because Grand Canyon sucks!">
-        <img class="hero-image" src="images/index-background.jpg" width="1200" height="485" alt="Изображение гор">
+        <img class="hero-title" src="images/hero/welcome.svg" width="458" height="352" alt="Welcome to the gorgerous Sedona, because Grand Canyon sucks!">
+        <img class="hero-image" src="images/hero/index-background.jpg" width="1200" height="485" alt="Изображение гор">
       </section>
 
 
@@ -59,7 +59,7 @@
               <h3 class="advantages-title  ">Настоящий городок</h3>
               <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
-            <img class="advantage-image" src="#" width="800" height="385" alt="Вид на дом из сада">
+            <img class="advantage-image" src="images/advantages/real-town.jpg" width="800" height="385" alt="Вид на дом из сада">
           </li>
           <li class="advantages-item">
             <div class="description-element color-light">
@@ -80,7 +80,7 @@
             </div>
           </li>
           <li class="advantages-item-picture">
-            <img class="advantage-image" src="img/photo-2.jpg" width="800" height="385" alt="Вид на каньон">
+            <img class="advantage-image" src="images/advantages/devil's-bridge.jpg" width="800" height="385" alt="Вид на каньон">
             <div class="description-element color-basic">
               <h3 class="advantages-title">Там есть мост дьявола</h3>
               <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
@@ -152,10 +152,6 @@
         </li>
       </ul>
       <a class="phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-
-
-
-
       <a class="copyright-logo" href="https://htmlacademy.ru/">
         <span class="visually-hidden">Разработано htmlacademy.ru</span>
       </a>
