Изменяет названия графических файлов
Убирает лишние символы

--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <body>
     <header class="page-header">
       <a class="logo" href="#">
-        <img src="images/header/logo.svg" width="140" height="70,05" alt="Логотип">
+        <img src="images/header/logo.svg" width="140" height="70" alt="Логотип">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
@@ -146,7 +146,7 @@
             <li class="product-item">
               <a class="product-link" href="#">
                 <h3 class="product-title">Amara Resort & Spa</h3>
-                <img class="product-image" src="images/cards/Amara-Resort-&-Spa.jpg" width="300" height="212" alt="Вид звездного неба из ущелья">
+                <img class="product-image" src="images/cards/amara.jpg" width="300" height="212" alt="Вид звездного неба из ущелья">
               </a>
               <span class="product-type">Гостиница</span>
               <span class="product-price">От 4000 ₽</span>
@@ -161,7 +161,7 @@
             <li class="product-item">
               <a class="product-link" href="#">
                 <h3 class="product-title">Villas at Poco Diablo</h3>
-                <img class="product-image" src="images/cards/Villas-at-Poco-Diablo.jpg" width="300" height="212" alt="Вид на гору, пасмурное небо и радугу">
+                <img class="product-image" src="images/cards/villas-diablo.jpg" width="300" height="212" alt="Вид на гору, пасмурное небо и радугу">
               </a>
               <span class="product-type">Гостиница</span>
               <span class="product-price">От 5000 ₽</span>
@@ -176,7 +176,7 @@
             <li class="product-item">
               <a class="product-link" href="#">
                 <h3 class="product-title">Desert Quail Inn</h3>
-                <img class="product-image" src="images/cards/Desert-Quail-Inn.jpg" width="300" height="212" alt="Вид на гору, ясная погода">
+                <img class="product-image" src="images/cards/desert.jpg" width="300" height="212" alt="Вид на гору, ясная погода">
               </a>
               <span class="product-type">Гостиница</span>
               <span class="product-price">От 2500 ₽</span>
@@ -191,7 +191,7 @@
             <li class="product-item">
               <a class="product-link" href="#">
                 <h3 class="product-title">GreenTree Inn</h3>
-                <img class="product-image" src="images/cards/GreenTree-Inn.jpg" width="300" height="212" alt="Вид на гору ночью">
+                <img class="product-image" src="images/cards/green-tree.jpg" width="300" height="212" alt="Вид на гору ночью">
               </a>
               <span class="product-type">Гостиница</span>
               <span class="product-price">От 1500 ₽</span>
