--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header class="page-header">
       <a class="logo" href="index.html">
-        <img src="images/header/logo.svg" width="140" height="70,05" alt="Логотип">
+        <img src="images/header/logo.svg" width="140" height="70" alt="Логотип">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
@@ -77,7 +77,7 @@
             </div>
           </li>
           <li class="advantages-item-picture">
-            <img class="advantage-image" src="images/advantages/devil's-bridge.jpg" width="800" height="385" alt="Вид на каньон">
+            <img class="advantage-image" src="images/advantages/bridge-devil.jpg" width="800" height="385" alt="Вид на каньон">
             <div class="description-element color-basic">
               <h3 class="advantages-title">Там есть мост дьявола</h3>
               <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
