--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
   <body>
     <header class="page-header">
       <a class="logo" href="#">
-        <img src="images/header/logo.svg" width="140" height="70" alt="Логотип">
+        <img src="images/logo.svg" width="140" height="70" alt="Логотип">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
