--- a/catalog.html
+++ b/catalog.html
@@ -125,7 +125,7 @@
       </section>
 
       <section class="catalog-products">
-        <h2 class="catalog-products-title">Найдено гостиниц: <span class="search-result">38</span></h2>
+        <h2 class="subtitle">Найдено гостиниц: <span class="search-result">38</span></h2>
         <select class="select-control" aria-label="Сортировка">
           <option value="cheap">Сначала дешёвые</option>
           <option value="expensive">Сначала дорогие</option>
@@ -230,8 +230,8 @@
       </section>
 
       <section class="subscribe">
-        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
-        <p class="subscribe-description">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
+        <h2 class="subtitle">Подпишитесь на рассылку</h2>
+        <p class="description-subtitle">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
         <form class="subscribe-form" action=" https://echo.htmlacademy.ru/" method="post">
           <label>
             <span class="visually-hidden">Ваш e-mail</span>
