--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
       </section>
 
       <section class="advantages">
-        <h2 class="advantages-slogan">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-        <p class="advantages-reasons">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+        <h2 class="subtitle">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+        <p class="description-subtitle">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <ul class="advantages-list">
           <li class="advantages-item-picture">
             <div class="description-element color-basic">
-              <h3 class="advantages-title  ">Настоящий городок</h3>
+              <h3 class="advantages-title">Настоящий городок</h3>
               <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
             <img class="advantage-image" src="images/advantages/real-town.jpg" width="800" height="385" alt="Вид на дом из сада">
@@ -88,8 +88,8 @@
       </section>
 
       <section class="services">
-        <h2 class="services-slogan">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
-        <p class="services-reasons">Опытный персонал и качественное обслуживание!</p>
+        <h2 class="subtitle">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+        <p class="description-subtitle">Опытный персонал и качественное обслуживание!</p>
         <ul class="services-list">
           <li class="services-item">
             <div class="description-element color-light">
@@ -113,14 +113,14 @@
       </section>
 
       <section class="interested">
-        <h2 class="interested-title">Заинтересовались?</h2>
-        <p class="interested-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <h2 class="subtitle">Заинтересовались?</h2>
+        <p class="description-subtitle">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a class="interested-button" href="#">Поиск гостиницы в Cедоне</a>
       </section>
 
-      <section class="subscribe">
-        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
-        <p class="subscribe-description">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
+      <section class="subscribe subscribe-main-page">
+        <h2 class="subtitle">Подпишитесь на рассылку</h2>
+        <p class="description-subtitle">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
         <form class="subscribe-form" action=" https://echo.htmlacademy.ru/" method="post">
           <label>
             <span class="visually-hidden">Ваш e-mail</span>
