--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <a class="interested-button" href="#">Поиск гостиницы в Cедоне</a>
       </section>
 
-      <section class="subscribe subscribe-main-page">
+      <section class="subscribe subscribe-bg">
         <h2 class="subtitle">Подпишитесь на рассылку</h2>
         <p class="description-subtitle">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
         <form class="subscribe-form" action=" https://echo.htmlacademy.ru/" method="post">
@@ -134,17 +134,17 @@
     <footer class="page-footer">
       <ul class="socials-list">
         <li class="socials-item">
-          <a class="socials-link-vk" href="#">
+          <a class="socials-link vk" href="#">
             <span class="visually-hidden">В Контакте</span>
           </a>
         </li>
         <li class="socials-item">
-          <a class="socials-link-tg" href="#">
+          <a class="socials-link tg" href="#">
             <span class="visually-hidden">Telegram</span>
           </a>
         </li>
         <li class="socials-item">
-          <a class="socials-link-yt" href="#">
+          <a class="socials-link yt" href="#">
             <span class="visually-hidden">Youtube</span>
           </a>
         </li>
