Добавляет иконки поиска и избранного

--- a/catalog.html
+++ b/catalog.html
@@ -144,6 +144,7 @@
                   <span class="visually-hidden">Показать карточки.</span>
                 </a>
               </li>
+
               <li class="button-show-item">
                 <a class="button-show" href="#">
                   <span class="visually-hidden">Показать слайды.</span>
@@ -260,12 +261,12 @@
             </a>
           </li>
           <li class="socials-item">
-            <a class="socials-link tg" href="#">
+            <a class="socials-link telegram" href="#">
               <span class="visually-hidden">Telegram</span>
             </a>
           </li>
           <li class="socials-item">
-            <a class="socials-link yt" href="#">
+            <a class="socials-link youtube" href="#">
               <span class="visually-hidden">Youtube</span>
             </a>
           </li>
